--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:prod": "node dist/main",
-    "test": "jest",
+    "test:e2e": "jest --config jest-e2e.json --runInBand",
     "test:coverage": "jest --coverage --verbose",
-    "test:watch": "jest --watch"
+    "test:ci": "npm run test:coverage && npm run test:e2e"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.5",
